--- a/src/main/resources/templates/client/home/index.html
+++ b/src/main/resources/templates/client/home/index.html
@@ -166,6 +166,39 @@
     </div>
     <!-- End .container-fluid -->
     <div class="container-fluid">
+
+       <div class="row justify-content-center">
+           <div class="col-md-8">
+               <div class="row">
+                   <div class="col-md-7">
+                       <h2>Looking for a vehicle?<br> You’re at the right place.</h2>
+                       <p>We have a large selection of quality pre-owned cars available for you to choose from. Rental plans and vehicles to suit your needs.</p>
+                       <p>With over 100 cars located nationwide, we will have something for you.</p>
+                   </div>
+                   <div class="col-md-5 bg-light p-4 rounded">
+                       <h3>Find the ideal car rental for your trip</h3>
+                       <form th:action="@{/car/client}" method="get">
+                           <div class="mb-3">
+                               <label for="location" class="form-label">PICK UP LOCATION</label>
+                               <input type="text" class="form-control" id="location" name="location">
+                           </div>
+                           <div class="mb-3">
+                               <label for="pickupDate" class="form-label">PICK-UP DATE AND TIME</label>
+                               <input type="date" class="form-control" id="pickupDate" name="startDate">
+                               <input type="time" class="form-control mt-1" id="pickupTime" name="startTime">
+                           </div>
+                           <div class="mb-3">
+                               <label for="dropoffDate" class="form-label">DROP-OFF DATE AND TIME</label>
+                               <input type="date" class="form-control" id="dropoffDate" name="endDate">
+                               <input type="time" class="form-control mt-1" id="dropoffTime" name="endTime">
+                           </div>
+                           <button type="submit" class="btn btn-primary w-100">Search</button>
+                       </form>
+                   </div>
+               </div>
+           </div>
+       </div>
+
         <div class="row">
             <div class="col-xl-9 col-xxl-10">
                 <div class="row">
