fix booking status

--- a/src/main/resources/templates/client/layout.html
+++ b/src/main/resources/templates/client/layout.html
@@ -132,21 +132,37 @@
     }
 
     var isSuccess = [[${isSuccess}]];
-        var isAuth = [[${isAuth}]];
-
+    var isAuth = [[${isAuth}]];
+    var isFail = [[${isAuth}]];
+    if (isFail) {
+        if (isAuth) {
+            Swal.fire({
+                icon: 'error',
+                title: 'Thuê xe thất bại',
+                text: 'Xe đã được đặt ở thời điểm này',
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    window.location.href = new URL(window.location.href).origin + "/car/check-out";
+                }
+            })
+        }
+    }
     if (isSuccess) {
         if (isAuth) {
             Swal.fire({
                 icon: 'success',
                 title: 'Thông báo',
-                text: 'Đặt hàng thành công',
+                text: 'Thuê xe thành công',
             }).then((result) => {
                 if (result.isConfirmed) {
-                    window.location.href = new URL(window.location.href).origin + "/car/order";
+                    window.location.href = new URL(window.location.href).origin + "/car/booking-list";
                 }
             })
         }
     }
+
+
+
     /*]]>*/
 </script>
 </body>
