--- a/src/main/resources/templates/client/fragments/header.html
+++ b/src/main/resources/templates/client/fragments/header.html
@@ -196,7 +196,7 @@
 												<a th:href="@{/car/like}">Danh sách yêu thích</a>
 											</li>
 											<li>
-												<a th:href="@{/car/order}">Danh sách đặt hàng</a>
+												<a th:href="@{/car/booking-list}">Danh sách đặt hàng</a>
 											</li>
 											<li>
 												<a href="#change-modal" data-toggle="modal">Đổi mật khẩu</a>
