--- a/src/main/resources/templates/client/layout.html
+++ b/src/main/resources/templates/client/layout.html
@@ -134,6 +134,7 @@
     var isSuccess = [[${isSuccess}]];
     var isAuth = [[${isAuth}]];
     var isFail = [[${isAuth}]];
+    var carId = [[${carId}]];
     if (isFail) {
         if (isAuth) {
             Swal.fire({
@@ -142,7 +143,7 @@
                 text: 'Xe đã được đặt ở thời điểm này',
             }).then((result) => {
                 if (result.isConfirmed) {
-                    window.location.href = new URL(window.location.href).origin + "/car/check-out";
+                    window.location.href = new URL(window.location.href).origin + "/car/check-out?id=" + carId;
                 }
             })
         }
