--- a/src/main/resources/templates/client/carOwner/details.html
+++ b/src/main/resources/templates/client/carOwner/details.html
@@ -56,10 +56,15 @@
                             <p class="card-text">Price: <span th:text="${carDto.basePrice}">0</span></p>
                             <p class="card-text">Location: <span th:text="${carDto.address}">Location</span></p>
                             <label class="form-label">Status:</label>
-                            <select class="form-control" id="statusSelect">
-                                <option value="available" selected style="color: #00ff80">Available</option>
-                                <option value="stopped" style="color: #a52834">Stopped</option>
-                            </select>
+                            <form th:object="${carDto}">
+                                <select class="form-control" id="statusSelect" th:field="*{statusCar}">
+                                    <option th:each="status : ${T(com.example.projectbase.constant.StatusEnum).values()}"
+                                            th:value="${status.name()}"
+                                            th:text="${status.name()}"
+                                            th:selected="${status.name() == carDto.statusCar.name()}">
+                                    </option>
+                                </select>
+                            </form>
                         </div>
                         <div class="card-footer">
                             <a href="" class="btn btn-success">Confirm deposit</a>
@@ -94,14 +99,14 @@
                                 <div class="form-group">
                                     <label for="licensePlate">Name:</label>
                                     <input type="text" class="form-control" th:id="nameOfCar"
-                                           th:field="*{name}">
+                                           th:field="*{name}" required>
                                     <div class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
                                 </div>
 
                                 <div class="form-group">
                                     <label for="licensePlate">License Plate:</label>
                                     <input type="text" class="form-control" id="licensePlate" name="licensePlate"
-                                           th:field="*{licensePlate}">
+                                           th:field="*{licensePlate}" required>
                                     <div class="text-danger" th:if="${#fields.hasErrors('licensePlate')}" th:errors="*{licensePlate}"></div>
                                 </div>
                                 <div class="form-group">
@@ -133,19 +138,19 @@
                                 <div class="form-group">
                                     <label for="numberOfSeats">Number of Seats:</label>
                                     <input type="number" class="form-control" id="numberOfSeats" name="numberOfSeats"
-                                           th:field="*{numberOfSeats}">
+                                           th:field="*{numberOfSeats}" required>
                                     <div class="text-danger" th:if="${#fields.hasErrors('numberOfSeats')}" th:errors="*{numberOfSeats}"></div>
                                 </div>
                                 <div class="form-group">
                                     <label for="transmission">Transmission:</label>
                                     <input type="text" class="form-control" id="transmission" name="transmission"
-                                           th:field="*{transmissionType}">
+                                           th:field="*{transmissionType}" required>
                                     <div class="text-danger" th:if="${#fields.hasErrors('transmissionType')}" th:errors="*{transmissionType}"></div>
                                 </div>
                                 <div class="form-group">
                                     <label for="fuel">Fuel:</label>
                                     <input type="text" class="form-control" id="fuel" name="fuel"
-                                           th:field="*{fuelType}">
+                                           th:field="*{fuelType}" required>
                                     <div class="text-danger" th:if="${#fields.hasErrors('fuelType')}" th:errors="*{fuelType}"></div>
                                 </div>
                             </div>
@@ -198,25 +203,25 @@
                                 <div class="form-group">
                                     <label for="mileage">Mileage:</label>
                                     <input type="number" class="form-control" id="mileage" name="mileage"
-                                           th:field="*{mileage}">
-                                    <div class="text-danger" th:if="${#fields.hasErrors('mileage')}" th:errors="*{mileage}"></div>
+                                           th:field="*{mileage}" required>
+                                    <div class="text-danger" th:if="${#fields.hasErrors('mileage')}" th:errors="*{mileage}" ></div>
                                 </div>
                                 <div class="form-group">
                                     <label for="fuelConsumption">Fuel Consumption:</label>
-                                    <input type="number" class="form-control" id="fuelConsumption" name="fuelConsumption"
-                                           th:field="*{fuelConsumption}">
+                                    <input type="text" class="form-control" id="fuelConsumption" name="fuelConsumption"
+                                           th:field="*{fuelConsumption}" required>
                                     <div class="text-danger" th:if="${#fields.hasErrors('fuelConsumption')}" th:errors="*{fuelConsumption}"></div>
                                 </div>
                                 <div class="form-group">
                                     <label for="address">Address:</label>
                                     <input type="text" class="form-control" id="address" name="address"
-                                           th:field="*{address}">
+                                           th:field="*{address}" required>
                                     <div class="text-danger" th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></div>
                                 </div>
                                 <div class="form-group">
                                     <label for="description">Description:</label>
                                     <textarea class="form-control" id="description" name="description"
-                                              th:field="*{description}"></textarea>
+                                              th:field="*{description}" required></textarea>
                                     <div class="text-danger" th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></div>
                                 </div>
                             </div>
