--- a/src/main/resources/templates/client/carOwner/mycar.html
+++ b/src/main/resources/templates/client/carOwner/mycar.html
@@ -56,8 +56,7 @@
                             <p class="card-text">No. of rides: <span th:text="${car.bookings.size()}">0</span></p>
                             <p class="card-text">Price: <span th:text="${car.basePrice}">0</span></p>
                             <p class="card-text">Location: <span th:text="${car.address}">Location</span></p>
-    <!--                        <p class="card-text">Status: <span th:text="${car.status}">Status</span></p>-->
-                            <p class="card-text">Status: <span style="color: #00ff80">Available</span></p>
+                            <p class="card-text">Status: <span th:text="${car.statusCar}">Status: </span></p>
                         </div>
                         <div class="card-footer">
                             <a th:href="@{/car-owner/my-car/{id}(id=${car.id})}" class="btn btn-primary">View details</a>
@@ -66,8 +65,9 @@
                     </div>
                 </div>
             </div>
+            </div>
         </div>
-    </div>
+
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
             <li class="page-item" th:classappend="${currentPage == 1} ? 'disabled'">
@@ -86,7 +86,6 @@
         </ul>
     </nav>
 </div>
-
 </body>
 
 </html>
